Changelog
=========

6.4.dev0 - (unreleased)
-----------------------

6.3 - (2017-08-16)
------------------
* Change: Added some unit tests for rdf marshaller
  [zoltan_andras refs #86696]
* Bug fix: Treated get_size error when the blob is represented as a string
  [zoltan_andras refs #86449]

6.2 - (2017-06-26)
------------------
* Bug fix: tests fixes, failling tests in other products
* Bug fix: fixed PyLint warnings and errors
  [zoltan_andras refs #81209]

6.1 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

6.0 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.9 - (2017-04-14)
------------------
* Change: Enabled compatibility with eea.rdfmarshaller
  [zoleesan - refs #83153]

5.8 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

5.7 - (2015-10-05)
------------------
* Bug fix: Add missing GenericSetup importStep dependency
  [voineali refs #27405]

5.6 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

5.5 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

5.4 - (2014-12-23)
------------------
* Bug fix: eea-depiction-various importStep shows up as unresolved dependency
  [jean]

5.3 - (2014-01-22)
------------------
* Bug fix: Updated old URLs pointing Trac
  [ghicaale refs #18003]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

5.2 - (2012-11-09)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on