@@ -6,6 +6,7 @@
   <include file="atfolder.zcml" />
   <include file="attopic.zcml" />
   <include file="multimedia.zcml" />
+  <include file="dexterity.zcml" />
 
   <!-- BBB -->
   <browser:resourceDirectory
@@ -73,13 +74,5 @@
     class=".default.ImageListing"
     permission="zope.Public"
     />
-  
-  <!--  
-  <browser:page for="plone.dexterity.interfaces.IDexterityContent"
-    name="imgview"
-    class=".dexterity.DexterityImageView"
-    permission="zope.Public"
-    allowed_interface=".interfaces.IImageView" />    
-  -->
 
 </configure>
