@@ -1,0 +1,14 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+  xmlns:browser="http://namespaces.zope.org/browser"
+  xmlns:zcml="http://namespaces.zope.org/zcml"
+  i18n_domain="eea">
+
+  <browser:page
+    zcml:condition="installed plone.dexterity"
+    for="plone.dexterity.interfaces.IDexterityContent"
+    name="imgview"
+    class=".dexterity.DexterityImageView"
+    permission="zope.Public"
+    allowed_interface="eea.depiction.browser.interfaces.IImageView" />
+
+</configure>
